# ChangeLog for net-misc/ser
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/ser/ChangeLog,v 1.18 2005/09/12 21:30:33 stkn Exp $

*ser-0.9.4 (12 Sep 2005)

  12 Sep 2005; Stefan Knoblich <stkn@gentoo.org> +ser-0.9.4.ebuild:
  Version bump.

  12 Sep 2005; Stefan Knoblich <stkn@gentoo.org> -ser-0.8.9.ebuild,
  -ser-0.8.10.ebuild, -ser-0.8.11.ebuild, -ser-0.8.14.ebuild:
  Removed old versions.

  12 Sep 2005; Stefan Knoblich <stkn@gentoo.org> ser-0.9.0.ebuild:
  Splitted DEPEND into RDEPEND / DEPEND and stable on x86.

  12 Sep 2005; Stefan Knoblich <stkn@gentoo.org> files/ser.confd:
  Added location of config file to default options, because ser is looking for
  it in the wrong place.

  23 Aug 2005; Diego Pettenò <flameeyes@gentoo.org> ser-0.9.0.ebuild:
  Use -1 instead of /bin/false on enewuser call.

  15 Jun 2005; David Holm <dholm@gentoo.org> ser-0.9.0.ebuild:
  Added to ~ppc.

  14 Jun 2005; Jason Wever <weeve@gentoo.org> ser-0.9.0.ebuild:
  Added ~sparc keyword.

  12 Jun 2005; Stefan Knoblich <stkn@gentoo.org> ser-0.9.0.ebuild:
  Removed -* keyword, files are on gentoo mirrors now.

*ser-0.9.0 (12 Jun 2005)

  12 Jun 2005; Stefan Knoblich <stkn@gentoo.org>
  +files/ethz-1.0-ser-0.9.0.diff, +files/ldap-1.0-ser-0.9.0.diff,
  +files/ldaps-1.0-ser-0.9.0.diff, +files/silomail-1.0-ser-0.9.0.diff,
  +files/ser.confd, +files/ser.rc6, +ser-0.9.0.ebuild:
  Version bump and enhancements.

*ser-0.8.14 (25 Dec 2004)

  25 Dec 2004; Andrej Kacian <ticho@gentoo.org> ser-0.8.10.ebuild,
  ser-0.8.11.ebuild, +ser-0.8.14.ebuild, ser-0.8.9.ebuild:
  Version bump. Closes #75627, reported by Daniel Webert
  <rockoo@rockoo.homelinux.org>. Also changed SRC_URI in all ebuilds to use
  ${PV}.

  11 Jun 2004; Aron Griffis <agriffis@gentoo.org> ser-0.8.10.ebuild,
  ser-0.8.11.ebuild, ser-0.8.9.ebuild:
  Fix use invocation

*ser-0.8.11 (19 Nov 2003)

  19 Nov 2003; Martin Holzer <mholzer@gentoo.org> ser-0.8.11.ebuild: