@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/ser/Attic/ser-0.9.4.ebuild,v 1.1 2005/09/12 21:30:33 stkn Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/ser/Attic/ser-0.9.4.ebuild,v 1.2 2005/09/16 14:21:56 stkn Exp $
 
 inherit eutils flag-o-matic
 
@@ -109,7 +109,7 @@ src_compile() {
 	make all \
 		CFLAGS="${CFLAGS}" \
 		cfg-prefix=/ \
-		cfg-target=/etc/ser \
+		cfg-target=/etc/ser/ \
 		${myconf} || die
 }
 
